# bayesian-uav-brl

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/uav_brl/: check_network.py  run_random_baseline.py  train_dqn.py
src/uav_brl/agents/: dqn_agent.py  networks.py  random_agent.py  replay_buffer.py
src/uav_brl/envs/: uav_grid_env.py
src/uav_brl/utils/: device.py
tests/: test_env.py
