[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-brl"
version = "0.1.0"
description = "Bayesian reinforcement learning prototype for multi-UAV search and tracking on a 20x20 grid."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
